# monitoring-example

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/api/test/routers/: test.py
app/cmd/: api.py
config/: logging-a.yml  logging-b.yml  logging.yml
config/grafana/: grafana.ini
config/grafana/datasources/: datasource.yml
config/loki/: loki-config.yml
config/nginx/: nginx.conf
config/prometheus_data/: prometheus.yml
config/promtail/: promtail-config.yml
temp/: docker-compose.yml  docker-compose2.yml
