[tool.poetry]
name = "monitoring-fastapi"
version = "0.1.0"
description = ""
authors = ["pli <chordplaylist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
